plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.tashfi'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// spring reactive web
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// database (R2DBC) (reactive)
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
	runtimeOnly 'org.postgresql:r2dbc-postgresql'

	// SSL on R2DBC connections (required by Supabase)
	implementation 'io.netty:netty-tcnative-boringssl-static:2.0.78.Final'

	// liquibase (database migration)
	implementation 'org.springframework.boot:spring-boot-starter-liquibase'
	runtimeOnly 'org.postgresql:postgresql'

	// Model Mapper
	implementation 'org.modelmapper:modelmapper:3.1.1'

	// spring security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Image compression
	implementation 'net.coobird:thumbnailator:0.4.21'

	// needed for MockMultipartFile in handler
	implementation 'org.springframework:spring-test'

	// jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// dev tools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// H2 in-memory database for test profile (R2DBC)
	testRuntimeOnly 'io.r2dbc:r2dbc-h2'

	// tests
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
	systemProperty 'spring.profiles.active', 'test'
}
